Added nav anmd main section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <nav>This is the nav</nav> 
+   <main>Hello from main</main>
 </body>
 </html>
